0022683: Incorrect result of Select3D_Projector::Project() in the case of perspective projection